--- a/application.html
+++ b/application.html
@@ -1,13 +1,10 @@
-<script type="text/javascript"
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
-
-<h4> We have did 1 unsupervised learning method Principal Component Analysis to investigate the parameters and used 2 supervised machine learning method k Nearest Neighbor and Logistic Regression
-to predict the outcome. </h4>
-
-<h3> What is Logistic Regression? <h3>
-
-<h4>It’s an extension of linear regression where the dependent variable is categorical. It predicts the probability of the outcome variable.
-Logistic regression can be binomial or multinomial. In the binomial / binary logistic regression, the outcome can have only two types of values e.g. “Yes” or “No”. 
-Multinomial logistic refers to cases where the outcome can have three or more possible types of values (e.g., “good” vs. “very good” vs. “best” ). 
-Generally, the outcome is coded as “0″ and “1″ in binary logistic regression. </h4>
+<h4> We have done 1 unsupervised learning method Principal Component Analysis to investigate the parameters and used 2 supervised machine learning method k Nearest Neighbor and Logistic Regression
+to predict the outcome. 
+<br><br>Data Tab: It provides the basic data exploration. User can select any predictor and select the plot type histogram/bar chart/boxplot. For histogram user can select to overlay density plot. 
+The tab has numerical summery for the selected predictor. It also visualization of boxplot of all predictors together with mean and also the correlation plot. The 'Data Display' shows the data 
+in tabular format and user can download it if they want by just click of a button.
+<br><br>Unsupervised Learning Tab: It provides PCA for the dataset. User can visualise biplot between PCs. It also display the plot PCs with variability .
+<br><br>Supervised Learning Tab:
+<br>kNN: The tab display the result from 10-fold repeated cross validation. User also select the no of predictors and k to build the model and compare result with 10-fold repeated CV.
+<br>Logistic Regression: User can select the no of predictors to build the model and see the confusion matrix, accuracy, sensitivity ans specificity.
+</h4>
