--- a/dataset.html
+++ b/dataset.html
@@ -1,8 +1,8 @@
-<h5>The data set we have used here is Breast Cancer Data set from UCI Machine Learning Repository. This databases was obtained from the University of Wisconsin
-    Hospitals, Madison from Dr. William H. Wolberg.</h5>
-<h4> The data set can be accessed <a href="https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic)">here</a></h4>
+<h4>The data set we have used here is Breast Cancer Data set from UCI Machine Learning Repository. This databases was obtained from the University of Wisconsin
+    Hospitals, Madison from Dr. William H. Wolberg.<br>
+The data set can be accessed <a href="https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic)">here</a>
 <br>
-<h4>Here are the data set attributes details .... </h4> <br><br>
+Here are the data set attributes details ....  <br><br>
 <table>
 <thead>
 <tr>
@@ -70,4 +70,4 @@
 </tbody>
 </table>
 <br>
-<h4>We have mapped 2 to 0 and 4 to 1 for our analysis.</h4>
+We have mapped 2 to 0 and 4 to 1 for our analysis.</h4>
