--- a/application.html
+++ b/application.html
@@ -2,7 +2,7 @@
 to predict the outcome. 
 <br><br>Data Tab: It provides the basic data exploration. User can select any predictor and select the plot type histogram/bar chart/boxplot. For histogram user can select to overlay density plot. 
 The tab has numerical summery for the selected predictor. It also visualization of boxplot of all predictors together with mean and also the correlation plot. The 'Data Display' shows the data 
-in tabular format and user can download it if they want by just click of a button.
+in tabular format and user can download it if they want in CSV format by just click of a button.
 <br><br>Unsupervised Learning Tab: It provides PCA for the dataset. User can visualise biplot between PCs. It also display the plot PCs with variability .
 <br><br>Supervised Learning Tab:
 <br>kNN: The tab display the result from 10-fold repeated cross validation. User also select the no of predictors and k to build the model and compare result with 10-fold repeated CV.
