--- a/theory.html
+++ b/theory.html
@@ -2,7 +2,7 @@
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
-<h3> What is Principal Component analysis? <h3>
+<h3> What is Principal Component Analysis? <h3>
 <h4>Principal component analysis or PCA is a unsupervised learning method which works by dimension reduction technique.
 If we have p variables, they have some joint variability or correlation. PCA looks for linear combination of p variables which account for most of the variability.
 Usually variability can be represent by m PCs where m < p
